# StarkHouse

./: README.md
ML/: main.py
ML/.env/: pyvenv.cfg
ML/starkhouse/: .gitignore  Dockerfile  README.md  mnist_model.onnx  pyproject.toml  requirements.txt
ML/starkhouse/starkhouse/: Model.ipynb  Prediction_model.ipynb  Untitled.ipynb  main.py  predict_cairo_action.py  train_action.py
