[tool.poetry]
name = "starkhouse"
version = "0.1.0"
description = "Giza Actions SDK project"
authors = ["Giza <contact@gizatech.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
giza-actions = ">=0.2.1,<1.0.0"
giza-datasets = ">=0.1.0,<1.0.0"
torch = "^2.1.2"
torchvision = "^0.16.2"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
